--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   get: ^4.6.5
   get_storage: ^2.1.1
+  shared_preferences: ^2.2.2
   flutter_riverpod: ^2.4.9
   adaptive_theme: ^3.6.0
   gap: ^3.0.1
@@ -74,8 +75,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/a_dot_burr.jpeg
-    - images/a_dot_ham.jpeg
     - assets/svgs/
     - .env
 
